--- a/src/App.css
+++ b/src/App.css
@@ -54,41 +54,127 @@ body {
     justify-content: space-between;
     margin: 10px;
   }
+
+  /* LandingPage.css */
+
+.input-container {
+  margin-top: 20px;
+}
+
+.input-field {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+.share-buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.copy-link-button {
+  background-color: #f44336;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.copy-link-button:hover {
+  background-color: #d32f2f;
+}
+
   
   /* ProposalModal.css */
-  
   .proposal-modal {
-    display: none;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal-content {
-    background: #fff;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
-  
-  .close-btn {
-    color: red;
-    font-size: 15px;
-    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    max-width: 400px;
+    width: 100%;
+    text-align: center;
+    transition: transform 0.3s ease-in-out;
   }
   
   .proposal-modal.open {
-    display: flex;
+    transform: translate(-50%, -50%) scale(1);
+  }
+  
+  .modal-content {
+    position: relative;
+  }
+  
+  .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    color: #333;
+  }
+  
+  p {
+    margin: 20px 0;
   }
   
   .button-container {
     display: flex;
-    justify-content: space-between;
-    margin-top: 5px;
+    justify-content: center;
+  }
+  
+  .yes-btn,
+  .no-btn,
+  .next-btn {
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 0 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .yes-btn:hover,
+  .no-btn:hover,
+  .next-btn:hover {
+    background-color: #45a049;
+  }
+  
+  .no-btn {
+    background-color: #f44336;
+  }
+  
+  .no-btn:hover {
+    background-color: #d32f2f;
+  }
+  
+  .shake {
+    animation: shake 0.5s ease-in-out;
+  }
+  
+  @keyframes shake {
+    0%, 100% {
+      transform: translateX(0);
+    }
+    25%, 75% {
+      transform: translateX(-10px);
+    }
+    50% {
+      transform: translateX(10px);
+    }
   }
   
