--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Great Vibes', cursive; 
-    background-image:
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(117, 19, 93, 0.73)),
-    url('https://images.unsplash.com/photo-1615966650071-855b15f29ad1?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(117, 19, 93, 0.73)),
+                  url('src/assets/nathan-dumlao-EdULZpOKsUE-unsplash.webp');
     background-size: cover;
     background-position: center;
     height: 100vh;
