--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 /* LandingPage.css */
 body {
     margin: 0;
-    padding: 0;
-    font-family: 'Great Vibes', cursive; 
+    padding: 0; 
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(117, 19, 93, 0.73)),
-                  url('src/assets/nathan-dumlao-EdULZpOKsUE-unsplash.webp');
+                  url('src/assets/love.webp');
     background-size: cover;
     background-position: center;
     height: 100vh;
